# polimi-robotics

./: README.md
homework1_odometry/: CMakeLists.txt  README.md  package.xml
homework1_odometry/cfg/: parameters.cfg
homework1_odometry/launch/: up.launch
homework1_odometry/msg/: MOdometry.msg
homework1_odometry/src/: baseline.cpp  odometry.cpp  velocity.cpp
homework1_odometry/srv/: ResetPose.srv
homework2_localization/: CMakeLists.txt  README.md  package.xml
homework2_localization/launch/: amcl.launch  gmap.launch  kalm.launch  link.launch
homework2_localization/rviz/: loc.rviz  map.rviz
